--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lab4_transaction_asyn.js",
   "dependencies": {
     "ethereumjs-tx": "^2.1.2",
+    "express": "^4.17.1",
     "i": "^0.3.6",
     "node": "^15.10.0",
     "web3": "^1.3.4"
