--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1",
     "i": "^0.3.6",
     "node": "^15.10.0",
+    "sodium-native": "^3.2.1",
     "web3": "^1.3.4"
   },
   "devDependencies": {},
