--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lab4_transaction_asyn.js",
   "dependencies": {
     "big-number": "^2.0.0",
+    "dotenv": "^8.2.0",
     "ethereumjs-tx": "^2.1.2",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
